--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
     <application
         android:name=".TwitterApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:icon="@drawable/twitter_logo"
+        android:logo="@drawable/twitter_logo"
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,8 +33,12 @@
                     android:scheme="oauth" />
             </intent-filter>
         </activity>
-        <activity android:name=".TimelineActivity"
-            android:label="@string/title_activity_timeline"></activity>
+        <activity
+            android:name=".TimelineActivity">
+        </activity>
+        <activity
+            android:name=".ComposeTweetActivity">
+        </activity>
     </application>
 
 </manifest>
